--- a/apps/admin/src/app.css
+++ b/apps/admin/src/app.css
@@ -7,3 +7,21 @@
   margin: 0 auto;
   padding: 0 20px;
 }
+
+.custom-scrollbar {
+  scrollbar-color: #277bfa #d4e5fd;
+  scrollbar-width: thin;
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 3px;
+  height: 3px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track-piece {
+  background-color: #d4e5fd;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #277bfa;
+}
